collapse menu resizes correctly

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,16 @@
     color: #2D68FF;
 }
 
-.title-subheading {
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
+.nav-right {
+    width: 100%;
+}
+
+.btn-account {
+    min-width: 5rem;
 }
